# rbm

./: .gitignore  LICENSE  rbm.cabal
AI/: RBM.hs
AI/Data/: MNIST.hs
Graphics/Rendering/Chart/Plot/: PixelMap.hs
Test/: Test.cabal  Test1.hs  test.sh
test/: Test.hs
