Name:                rbm
Version:             0.1
Synopsis:            Restricted Boltzmann Machine
-- Description:         
Homepage:            https://github.com/chetant/rbm
License:             BSD3
License-file:        LICENSE
Author:              Chetan Taralekar
Maintainer:          chetant@gmail.com
Copyright:           Chetan Taralekar 2011-2012

Category:            AI

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
Extra-source-files:  README

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  -- Modules exported by the library.
  Exposed-modules:   AI.RBM
                    ,AI.Data.MNIST
                    ,Graphics.Rendering.Chart.Plot.PixelMap
  
  -- Packages needed in order to build this package.
  Build-depends:      base            >= 4.4    && < 5.0
                     ,bytestring      >= 0.9.2  && < 1.0
                     ,zlib            >= 0.5.3  && < 1.0
                     ,binary          >= 0.5.0  && < 1.0
                     ,filepath        >= 1.2    && < 2.0
                     ,vector          >= 0.9    && < 1.0
                     ,random-fu       >= 0.2.1  && < 1.0
                     ,repa            >= 2.2    && < 3.0
                     ,repa-bytestring >= 2.2    && < 3.0
                     ,repa-algorithms >= 2.2    && < 3.0
                     ,colour          >= 2.3.1  && < 3.0
                     ,cairo           >= 0.12.2 && < 1.0
                     ,Chart           >= 0.14   && < 1.0
                     ,data-accessor   >= 0.2.2  && < 1.0
                     ,data-accessor-template   >= 0.2.1.8  && < 1.0
  
  -- Modules not exported by this package.
  -- Other-modules:      Test.Test1
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
 